--- a/src/main/resources/FXMLAddTransaction.fxml
+++ b/src/main/resources/FXMLAddTransaction.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -41,9 +42,10 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="65.79999389648438" minHeight="10.0" prefHeight="27.400000000000006" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <RadioButton fx:id="programmedTransaction" mnemonicParsing="false" onAction="#activeNumWeek" text="Programmed Transaction" GridPane.columnIndex="1">
+                        <RadioButton fx:id="rateButton" mnemonicParsing="false" onAction="#activeNumWeek" text="Rate Transaction" GridPane.columnIndex="1">
                            <toggleGroup>
                               <ToggleGroup fx:id="tgTransaction" />
                            </toggleGroup></RadioButton>
@@ -54,28 +56,22 @@
                            </font>
                         </Label>
                         <DatePicker fx:id="transactionDate" prefHeight="17.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextArea fx:id="descriptionTransaction" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Description" GridPane.rowIndex="3">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="numweekTransaction" prefHeight="26.0" prefWidth="70.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="numweeklabel" text="Number of weeks" GridPane.rowIndex="2" />
+                        <TextField fx:id="numweekTransaction" prefHeight="26.0" prefWidth="70.0" promptText="ogni quanti giorni" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Label fx:id="numweeklabel" prefHeight="18.0" prefWidth="159.0" text="How Often Rate" GridPane.rowIndex="2" />
                         <Label text="Date" GridPane.rowIndex="1" />
+                        <ChoiceBox fx:id="numberOfTransaction" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label prefHeight="18.0" prefWidth="210.0" text="Tag for Transaction" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
                </center>
                <bottom>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                     <bottom>
-                        <ButtonBar prefHeight="0.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-                          <buttons>
-                            <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveNewTransaction" text="Save" />
-                              <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" text="&lt;Back" />
-                          </buttons>
-                        </ButtonBar>
-                     </bottom>
                      <left>
                         <TableView fx:id="tableAllTag" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <columns>
@@ -95,29 +91,54 @@
                      <center>
                         <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
                           <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <Button layoutX="93.0" layoutY="29.0" mnemonicParsing="false" onAction="#addTag" />
-                                    <ImageView fitHeight="84.0" fitWidth="94.0" layoutX="75.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@freccia.png" />
-                                       </image>
-                                    </ImageView>
+                                    <Button layoutX="78.0" layoutY="-2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="81.0">
+                                       <graphic>
+                                          <ImageView fitHeight="81.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@freccia.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic></Button>
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <Button layoutX="93.0" layoutY="29.0" mnemonicParsing="false" onAction="#leaveTag" />
-                                    <ImageView fitHeight="84.0" fitWidth="93.0" layoutX="76.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@freccia.png" />
-                                       </image>
-                                    </ImageView>
+                                    <Button layoutX="77.0" mnemonicParsing="false" onAction="#leaveTag" prefHeight="86.0" prefWidth="88.0">
+                                       <graphic>
+                                          <ImageView fitHeight="75.0" fitWidth="88.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@freccia.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic></Button>
                                  </children>
                               </AnchorPane>
                           </items>
                         </SplitPane>
                      </center>
+                     <bottom>
+                        <SplitPane dividerPositions="0.6253918495297806" prefHeight="28.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <Label fx:id="errorText" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="28.0" prefWidth="396.0" text="Attenzione completare tutti i dati altrimenti il dato non verrà salvato!" textFill="RED" />
+                                 </children>
+                              </AnchorPane>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <ButtonBar prefHeight="26.0" prefWidth="223.0">
+                                      <buttons>
+                                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveNewTransaction" prefHeight="26.0" prefWidth="131.0" text="Save" />
+                                          <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" text="&lt;Back" />
+                                      </buttons>
+                                    </ButtonBar>
+                                 </children>
+                              </AnchorPane>
+                          </items>
+                        </SplitPane>
+                     </bottom>
                   </BorderPane>
                </bottom>
             </BorderPane>
