--- a/src/main/resources/FXMLAddMovement.fxml
+++ b/src/main/resources/FXMLAddMovement.fxml
@@ -102,7 +102,7 @@
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <Button layoutX="79.0" layoutY="-3.0" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="110.0">
+                        <Button layoutX="79.0" layoutY="-3.0" mnemonicParsing="false" onAction="#leaveTag" prefHeight="86.0" prefWidth="110.0">
                            <graphic>
                               <ImageView fitHeight="81.0" fitWidth="113.0" nodeOrientation="RIGHT_TO_LEFT">
                                  <image>
