--- a/src/main/resources/FXMLHome.fxml
+++ b/src/main/resources/FXMLHome.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -130,8 +129,6 @@
                                  <content>
                                     <GridPane prefHeight="46.0" prefWidth="675.0">
                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -140,11 +137,9 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <TextArea fx:id="descriptionTransactionNew" prefHeight="200.0" prefWidth="131.0" GridPane.columnIndex="3" />
-                                          <DatePicker fx:id="dataTransactionNew" GridPane.columnIndex="1" />
-                                          <Label prefHeight="18.0" prefWidth="165.0" text="New Date" />
-                                          <Label prefHeight="18.0" prefWidth="136.0" text="New Description" GridPane.columnIndex="2" />
-                                          <Button fx:id="modifyTransactionButton" mnemonicParsing="false" onAction="#modifyTransaction" prefHeight="26.0" prefWidth="130.0" text="Modify" GridPane.columnIndex="4" />
+                                          <TextArea fx:id="descriptionTransactionNew" prefHeight="200.0" prefWidth="131.0" GridPane.columnIndex="1" />
+                                          <Label prefHeight="18.0" prefWidth="136.0" text="New Description" />
+                                          <Button fx:id="modifyTransactionButton" mnemonicParsing="false" onAction="#modifyTransaction" prefHeight="26.0" prefWidth="222.0" text="Modify" GridPane.columnIndex="2" />
                                        </children>
                                     </GridPane>
                                  </content>
@@ -187,6 +182,48 @@
                            </children>
                         </AnchorPane>
                      </content>
+                  </Tab>
+                  <Tab text="Budget">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="461.0" prefWidth="680.0">
+                                 <left>
+                                    <TableView fx:id="tableBudget" onKeyPressed="#viewResult" onMouseClicked="#viewResult" prefHeight="431.0" prefWidth="194.0" BorderPane.alignment="CENTER">
+                                      <columns>
+                                        <TableColumn fx:id="columnBudgetTag" prefWidth="95.20001220703125" text="Tag" />
+                                        <TableColumn fx:id="columnBudgetAmount" prefWidth="97.59998931884766" text="Amount" />
+                                      </columns>
+                                    </TableView>
+                                 </left>
+                                 <top>
+                                    <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                                      <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Button mnemonicParsing="false" onAction="#addBudget" prefHeight="26.0" prefWidth="137.0" text="Add Budget" GridPane.columnIndex="2" />
+                                          <Button mnemonicParsing="false" onAction="#deleteBudget" prefHeight="26.0" prefWidth="134.0" text="Delete" GridPane.columnIndex="3" />
+                                          <ChoiceBox fx:id="tagBudget" prefWidth="150.0" />
+                                          <TextField fx:id="budgetAmount" GridPane.columnIndex="1" />
+                                          <Button mnemonicParsing="false" onAction="#viewGraphBudget" prefHeight="26.0" prefWidth="138.0" text="View Graph" GridPane.columnIndex="4" />
+                                       </children>
+                                    </GridPane>
+                                 </top>
+                                 <center>
+                                    <Label fx:id="resultReport" prefHeight="139.0" prefWidth="203.0" BorderPane.alignment="CENTER" />
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                    </content>
                   </Tab>
               </tabs>
             </TabPane>
