--- a/src/main/resources/FXMLHome.fxml
+++ b/src/main/resources/FXMLHome.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -218,8 +219,11 @@
                                     </GridPane>
                                  </top>
                                  <center>
-                                    <Label fx:id="resultReport" prefHeight="139.0" prefWidth="203.0" BorderPane.alignment="CENTER" />
+                                    <Label fx:id="resultReport" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="431.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
                                  </center>
+                                 <right>
+                                    <PieChart fx:id="graphPieBudget" prefHeight="298.0" prefWidth="279.0" title="Graph " BorderPane.alignment="CENTER" />
+                                 </right>
                               </BorderPane>
                            </children>
                         </AnchorPane>
