--- a/src/main/resources/FXMLAddTransaction.fxml
+++ b/src/main/resources/FXMLAddTransaction.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="628.0" prefWidth="898.0">
          <children>
@@ -73,29 +73,29 @@
                <bottom>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <left>
-                        <TableView fx:id="tableAllTag" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tableAllTag" prefHeight="172.0" prefWidth="367.0" BorderPane.alignment="CENTER">
                           <columns>
-                            <TableColumn fx:id="columnNameA" prefWidth="75.0" text="Name" />
-                            <TableColumn fx:id="columnDescriptionA" prefWidth="75.0" text="Description" />
+                            <TableColumn fx:id="columnNameA" prefWidth="119.20001375675201" text="Name" />
+                            <TableColumn fx:id="columnDescriptionA" prefWidth="243.1999740600586" text="Description" />
                           </columns>
                         </TableView>
                      </left>
                      <right>
-                        <TableView fx:id="tableAddedTag" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tableAddedTag" prefHeight="172.0" prefWidth="337.0" BorderPane.alignment="CENTER">
                           <columns>
-                            <TableColumn fx:id="columnNameB" prefWidth="75.0" text="Name" />
-                            <TableColumn fx:id="columnDescriptionB" prefWidth="75.0" text="Description" />
+                            <TableColumn fx:id="columnNameB" prefWidth="111.19994813203812" text="Name" />
+                            <TableColumn fx:id="columnDescriptionB" prefWidth="225.6000518798828" text="Description" />
                           </columns>
                         </TableView>
                      </right>
                      <center>
-                        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+                        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="172.0" prefWidth="250.0" BorderPane.alignment="CENTER">
                           <items>
                             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
                                     <Button layoutX="78.0" layoutY="-2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="81.0">
                                        <graphic>
-                                          <ImageView fitHeight="81.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="81.0" fitWidth="344.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
                                                 <Image url="@freccia.png" />
                                              </image>
