--- a/src/main/resources/FXMLAddTransaction.fxml
+++ b/src/main/resources/FXMLAddTransaction.fxml
@@ -73,7 +73,7 @@
                <bottom>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <left>
-                        <TableView fx:id="tableAllTag" prefHeight="172.0" prefWidth="367.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tableAllTag" prefHeight="172.0" prefWidth="350.0" BorderPane.alignment="CENTER">
                           <columns>
                             <TableColumn fx:id="columnNameA" prefWidth="119.20001375675201" text="Name" />
                             <TableColumn fx:id="columnDescriptionA" prefWidth="243.1999740600586" text="Description" />
@@ -81,7 +81,7 @@
                         </TableView>
                      </left>
                      <right>
-                        <TableView fx:id="tableAddedTag" prefHeight="172.0" prefWidth="337.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tableAddedTag" prefHeight="172.0" prefWidth="350.0" BorderPane.alignment="CENTER">
                           <columns>
                             <TableColumn fx:id="columnNameB" prefWidth="111.19994813203812" text="Name" />
                             <TableColumn fx:id="columnDescriptionB" prefWidth="225.6000518798828" text="Description" />
@@ -93,11 +93,11 @@
                           <items>
                             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <Button layoutX="78.0" layoutY="-2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="81.0">
+                                    <Button layoutY="-4.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addTag" prefHeight="86.0" prefWidth="81.0" style="-fx-background-color: #00FF00;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <graphic>
                                           <ImageView fitHeight="81.0" fitWidth="344.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@freccia.png" />
+                                                <Image url="@frecciaR.png" />
                                              </image>
                                           </ImageView>
                                        </graphic></Button>
@@ -105,11 +105,11 @@
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <Button layoutX="77.0" mnemonicParsing="false" onAction="#leaveTag" prefHeight="86.0" prefWidth="88.0">
+                                    <Button layoutY="-5.0" mnemonicParsing="false" onAction="#leaveTag" prefHeight="86.0" prefWidth="88.0" style="-fx-background-color: #FF0000;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <graphic>
                                           <ImageView fitHeight="75.0" fitWidth="88.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@freccia.png" />
+                                                <Image url="@frecciaL.png" />
                                              </image>
                                           </ImageView>
                                        </graphic></Button>
